--- a/index.html
+++ b/index.html
@@ -1,10 +1,156 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ohmyfood</title>
+    <title>ohmyfood</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="sass/main.css" />
+    <script
+      src="https://kit.fontawesome.com/9acfb66856.js"
+      crossorigin="anonymous"
+      defer
+    ></script>
   </head>
-  <body></body>
+  <body>
+    <div class="spinner"><span class="fas fa-spinner"></span></div>
+    <header class="header">
+      <img src="design/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood" />
+    </header>
+    <aside class="header-location">
+      <span class="fas fa-map-marker-alt"></span>
+      <p>Paris, Belleville</p>
+    </aside>
+    <main>
+      <section>
+        <h1 class="title text--center">Réservez le menu qui vous convient</h1>
+        <p class="text--center text--light text--gray">
+          Découvrez des restaurants d'exception, séléectionnées par nos soins.
+        </p>
+        <a href="" class="button">Exporer nos restaurants</a>
+      </section>
+
+      <section class="section--white">
+        <h2 class="title">Fonctionnement</h2>
+        <ul class="fonctionnement">
+          <li data-number="1" class="fonctionnement__card">
+            <span class="fas fa-mobile-alt"></span>
+            <p>Choisissez un restaurant</p>
+          </li>
+          <li data-number="2" class="fonctionnement__card">
+            <span class="fas fa-list-ul"></span>
+            <p>Composez votre menu</p>
+          </li>
+          <li data-number="3" class="fonctionnement__card">
+            <span class="fas fa-store"></span>
+            <p>Dégustez au restaurant</p>
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <h2 class="title">Restaurants</h2>
+        <div>
+          <a href="/menu1.html" class="card card--new">
+            <img
+              src="design/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+              alt="food"
+            />
+            <div class="card__info">
+              <div>
+                <h3>La palette du goût</h3>
+                <p>Ménilmontant</p>
+              </div>
+              <div class="heart">
+                <span class="far fa-heart heart--empty"></span>
+                <span class="fas fa-heart heart--full"></span>
+              </div>
+            </div>
+          </a>
+
+          <a href="/" class="card card--new">
+            <img
+              src="design/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+              alt="food"
+            />
+            <div class="card__info">
+              <div>
+                <h3>La note enchantée</h3>
+                <p>Charonne</p>
+              </div>
+              <div>
+                <span class="far fa-heart"></span>
+                <span class="fas fa-heart"></span>
+              </div>
+            </div>
+          </a>
+
+          <a href="/" class="card">
+            <img
+              src="design/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+              alt="food"
+            />
+            <div class="card__info">
+              <div>
+                <h3>À la française</h3>
+                <p>Cité Rouge</p>
+              </div>
+              <div>
+                <span class="far fa-heart"></span>
+                <span class="fas fa-heart"></span>
+              </div>
+            </div>
+          </a>
+
+          <a href="/" class="card">
+            <img
+              src="design/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+              alt="food"
+            />
+            <div class="card__info">
+              <div>
+                <h3>Le délice des sens</h3>
+                <p>Folie-Méricourt</p>
+              </div>
+              <div>
+                <span class="far fa-heart"></span>
+                <span class="fas fa-heart"></span>
+              </div>
+            </div>
+          </a>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <img src="design/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood" />
+      <ul class="footer__list">
+        <li>
+          <a href=""
+            ><span class="fas fa-utensils"></span>Proposer un restaurant</a
+          >
+        </li>
+        <li>
+          <a href=""
+            ><span class="fas fa-hands-helping"></span>Devenir partenaire</a
+          >
+        </li>
+        <li>
+          <a
+            href="
+          "
+            >Mentions légales</a
+          >
+        </li>
+        <li>
+          <a href="mailto: ohmyfood@gmail.com"> Contact</a>
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
