--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     ></script>
   </head>
   <body>
-    <div class="spinner"><span class="fas fa-spinner"></span></div>
+    <!--   <div class="spinner"><span class="fas fa-spinner"></span></div> -->
     <header class="header">
       <img src="design/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood" />
     </header>
@@ -67,13 +67,48 @@
                 <p>Ménilmontant</p>
               </div>
               <div class="heart">
-                <span class="far fa-heart heart--empty"></span>
-                <span class="fas fa-heart heart--full"></span>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="25"
+                  height="25"
+                  viewBox="0 0 24 26"
+                  class="heart__empty"
+                >
+                  <path
+                    d="M12 4.248c-3.148-5.402-12-3.825-12 2.944 0 4.661 5.571 9.427 12 15.808 6.43-6.381 12-11.147 12-15.808 0-6.792-8.875-8.306-12-2.944z"
+                    stroke-width="2"
+                    stroke="black"
+                    stroke-opacity="0.7"
+                    fill="none"
+                  />
+                </svg>
+
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="25"
+                  height="25"
+                  viewBox="0 0 24 26"
+                  class="heart__full"
+                >
+                  <path
+                    d="M12 4.248c-3.148-5.402-12-3.825-12 2.944 0 4.661 5.571 9.427 12 15.808 6.43-6.381 12-11.147 12-15.808 0-6.792-8.875-8.306-12-2.944z"
+                    fill="url(#gradient)"
+                  />
+                  <defs>
+                    <linearGradient
+                      id="gradient"
+                      gradientTransform="rotate(90)"
+                    >
+                      <stop offset="0%" stop-color="#9356dc" />
+                      <stop offset="100%" stop-color="#ff79da" />
+                    </linearGradient>
+                  </defs>
+                </svg>
               </div>
             </div>
           </a>
 
-          <a href="/" class="card card--new">
+          <a href="/menu2.html" class="card card--new">
             <img
               src="design/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
               alt="food"
@@ -83,14 +118,40 @@
                 <h3>La note enchantée</h3>
                 <p>Charonne</p>
               </div>
-              <div>
-                <span class="far fa-heart"></span>
-                <span class="fas fa-heart"></span>
+              <div class="heart">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="25"
+                  height="25"
+                  viewBox="0 0 24 26"
+                  class="heart__empty"
+                >
+                  <path
+                    d="M12 4.248c-3.148-5.402-12-3.825-12 2.944 0 4.661 5.571 9.427 12 15.808 6.43-6.381 12-11.147 12-15.808 0-6.792-8.875-8.306-12-2.944z"
+                    stroke-width="2"
+                    stroke="black"
+                    stroke-opacity="0.7"
+                    fill="none"
+                  />
+                </svg>
+
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="25"
+                  height="25"
+                  viewBox="0 0 24 26"
+                  class="heart__full"
+                >
+                  <path
+                    d="M12 4.248c-3.148-5.402-12-3.825-12 2.944 0 4.661 5.571 9.427 12 15.808 6.43-6.381 12-11.147 12-15.808 0-6.792-8.875-8.306-12-2.944z"
+                    fill="url(#gradient)"
+                  />
+                </svg>
               </div>
             </div>
           </a>
 
-          <a href="/" class="card">
+          <a href="/menu3.html" class="card">
             <img
               src="design/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
               alt="food"
@@ -100,14 +161,40 @@
                 <h3>À la française</h3>
                 <p>Cité Rouge</p>
               </div>
-              <div>
-                <span class="far fa-heart"></span>
-                <span class="fas fa-heart"></span>
+              <div class="heart">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="25"
+                  height="25"
+                  viewBox="0 0 24 26"
+                  class="heart__empty"
+                >
+                  <path
+                    d="M12 4.248c-3.148-5.402-12-3.825-12 2.944 0 4.661 5.571 9.427 12 15.808 6.43-6.381 12-11.147 12-15.808 0-6.792-8.875-8.306-12-2.944z"
+                    stroke-width="2"
+                    stroke="black"
+                    stroke-opacity="0.7"
+                    fill="none"
+                  />
+                </svg>
+
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="25"
+                  height="25"
+                  viewBox="0 0 24 26"
+                  class="heart__full"
+                >
+                  <path
+                    d="M12 4.248c-3.148-5.402-12-3.825-12 2.944 0 4.661 5.571 9.427 12 15.808 6.43-6.381 12-11.147 12-15.808 0-6.792-8.875-8.306-12-2.944z"
+                    fill="url(#gradient)"
+                  />
+                </svg>
               </div>
             </div>
           </a>
 
-          <a href="/" class="card">
+          <a href="/menu4.html" class="card">
             <img
               src="design/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
               alt="food"
@@ -117,9 +204,34 @@
                 <h3>Le délice des sens</h3>
                 <p>Folie-Méricourt</p>
               </div>
-              <div>
-                <span class="far fa-heart"></span>
-                <span class="fas fa-heart"></span>
+              <div class="heart">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="25"
+                  height="25"
+                  viewBox="0 0 24 26"
+                  class="heart__empty"
+                >
+                  <path
+                    d="M12 4.248c-3.148-5.402-12-3.825-12 2.944 0 4.661 5.571 9.427 12 15.808 6.43-6.381 12-11.147 12-15.808 0-6.792-8.875-8.306-12-2.944z"
+                    stroke-width="2"
+                    stroke="black"
+                    stroke-opacity="0.7"
+                    fill="none"
+                  />
+                </svg>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="25"
+                  height="25"
+                  viewBox="0 0 24 26"
+                  class="heart__full"
+                >
+                  <path
+                    d="M12 4.248c-3.148-5.402-12-3.825-12 2.944 0 4.661 5.571 9.427 12 15.808 6.43-6.381 12-11.147 12-15.808 0-6.792-8.875-8.306-12-2.944z"
+                    fill="url(#gradient)"
+                  />
+                </svg>
               </div>
             </div>
           </a>
@@ -148,7 +260,7 @@
           >
         </li>
         <li>
-          <a href="mailto: ohmyfood@gmail.com"> Contact</a>
+          <a href="mailto:ohmyfood@gmail.com">Contact</a>
         </li>
       </ul>
     </footer>
