--- a/menu1.html
+++ b/menu1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ohmyfood</title>
+    <title>ohmyfood - La palette du goût</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&family=Shrikhand&display=swap"
@@ -34,9 +34,41 @@
     <main class="menu">
       <div class="menu__title">
         <h1 class="title title--font">La palette du goût</h1>
-        <div>
-          <span class="far fa-heart"></span>
-          <span class="fas fa-heart"></span>
+        <div class="heart">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="25"
+            height="25"
+            viewBox="0 0 24 26"
+            class="heart__empty"
+          >
+            <path
+              d="M12 4.248c-3.148-5.402-12-3.825-12 2.944 0 4.661 5.571 9.427 12 15.808 6.43-6.381 12-11.147 12-15.808 0-6.792-8.875-8.306-12-2.944z"
+              stroke-width="2"
+              stroke="black"
+              stroke-opacity="0.7"
+              fill="none"
+            />
+          </svg>
+
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="25"
+            height="25"
+            viewBox="0 0 24 26"
+            class="heart__full"
+          >
+            <path
+              d="M12 4.248c-3.148-5.402-12-3.825-12 2.944 0 4.661 5.571 9.427 12 15.808 6.43-6.381 12-11.147 12-15.808 0-6.792-8.875-8.306-12-2.944z"
+              fill="url(#gradient)"
+            />
+            <defs>
+              <linearGradient id="gradient" gradientTransform="rotate(90)">
+                <stop offset="0%" stop-color="#9356dc" />
+                <stop offset="100%" stop-color="#ff79da" />
+              </linearGradient>
+            </defs>
+          </svg>
         </div>
       </div>
 
