correction et ajout du responsive

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <p>Paris, Belleville</p>
     </aside>
     <main>
-      <section>
+      <section class="section--home">
         <h1 class="title text--center">Réservez le menu qui vous convient</h1>
         <p class="text--center text--light text--gray">
           Découvrez des restaurants d'exception, séléectionnées par nos soins.
@@ -35,7 +35,7 @@
         <a href="" class="button">Exporer nos restaurants</a>
       </section>
 
-      <section class="section--white">
+      <section class="section--white section--home">
         <h2 class="title">Fonctionnement</h2>
         <ul class="fonctionnement">
           <li data-number="1" class="fonctionnement__card">
@@ -53,7 +53,7 @@
         </ul>
       </section>
 
-      <section>
+      <section class="section--home">
         <h2 class="title">Restaurants</h2>
         <div>
           <a href="/menu1.html" class="card card--new">
