--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     ></script>
   </head>
   <body>
-    <!--   <div class="spinner"><span class="fas fa-spinner"></span></div> -->
+    <div class="spinner"><span class="fas fa-spinner"></span></div>
     <header class="header">
       <img src="design/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood" />
     </header>
