--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
       <section class="section--home">
         <h2 class="title">Restaurants</h2>
-        <div>
+        <div class="section__card">
           <a href="/menu1.html" class="card card--new">
             <img
               src="design/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
